# pandas_exercises

./: .gitignore  README.md  pyproject.toml
01_Getting_&_Knowing_Your_Data/Chipotle/: Exercise_with_Solutions.ipynb  Exercises.ipynb
01_Getting_&_Knowing_Your_Data/Occupation/: Exercises.ipynb
01_Getting_&_Knowing_Your_Data/World Food Facts/: Exercises.ipynb
02_Filtering_&_Sorting/Chipotle/: Exercises.ipynb
02_Filtering_&_Sorting/Euro12/: Exercises.ipynb
02_Filtering_&_Sorting/Fictional Army/: Exercise.ipynb
03_Grouping/Alcohol_Consumption/: Exercise.ipynb
03_Grouping/Occupation/: Exercise.ipynb
03_Grouping/Regiment/: Exercises.ipynb
04_Apply/Students_Alcohol_Consumption/: Exercises.ipynb
04_Apply/US_Crime_Rates/: Exercises.ipynb
05_Merge/Auto_MPG/: Exercises.ipynb
05_Merge/Fictitous Names/: Exercises.ipynb
05_Merge/Housing Market/: Exercises.ipynb
06_Stats/US_Baby_Names/: Exercises.ipynb
06_Stats/Wind_Stats/: Exercises.ipynb
07_Visualization/Online_Retail/: Exercises.ipynb  Exercises_with_solutions_code.ipynb
07_Visualization/Scores/: Exercises.ipynb
07_Visualization/Tips/: Exercises.ipynb
07_Visualization/Titanic_Desaster/: Exercises.ipynb
08_Creating_Series_and_DataFrames/Pokemon/: Exercises.ipynb
09_Time_Series/Apple_Stock/: Exercises.ipynb
09_Time_Series/Investor_Flow_of_Funds_US/: Exercises.ipynb
10_Deleting/Iris/: Exercises.ipynb
10_Deleting/Wine/: Exercises.ipynb  Exercises_code_and_solutions.ipynb
